# Tenderizer

./: .env.example  .gitattributes  .gitignore  CHANGE_REQUEST_001.md  CHANGE_REQUEST_003.md  DEPLOYMENT.md  Dockerfile  alembic.ini  check.ps1  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  scratch_backfill_award_info.py  scratch_backfill_boamp_cpv.py  scratch_backfill_language.py  scratch_backfill_notice_type.py  scratch_boamp.py  scratch_boamp_run.py  scratch_calibration_export.py  scratch_counts.py  scratch_fields.py  scratch_migrate_legacy_sqlite.py  scratch_narrow.py  scratch_normalize.py  scratch_report.py  scratch_rescore_matching.py  scratch_ted.py  start.ps1
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 3309b0631bb4_award_detail_column.py  5dce3f225121_vault_documents_tags_column.py  (+3 more)
config/: cpv.yaml  cpv_reference.json  exclusions.yaml  keywords.yaml  portals.yaml
data/: last_run.json
design_handoff_vault_composer/: README.md  Tenderizer.dc.html  claude_design_brief_proposal_drafting.md
frontend/: README.md  index.html  package.json
src/: alerts.py  api.py  auth.py  backup.py  classification.py  cli.py  composer.py  config.py  currency.py  db.py  dedup.py  digest.py  filters.py  match.py  normalize.py  report.py  run.py  schema.py  store.py  translate.py  vault.py
tenderizer_handoff/: CLAUDE_CODE_BUILD.md  Production Checklist.dc.html  SETUP.md
tests/: conftest.py  scratch_counts.py  test_06_ted_connector.py  test_07_normalize_store.py  test_08_matcher.py  test_09_report.py  test_10_boamp.py  test_11_run.py  test_12_filters.py  test_13_cpv_config.py  test_14_keyword_sync.py  test_15_currency.py  test_16_dedup.py  test_17_api.py  test_18_translate.py  test_19_db.py  test_20_tenant_config.py  test_21_auth.py  test_22_pipeline.py  test_23_dismiss_note.py  test_24_classification.py  test_25_past_tenders_api.py  test_26_documents.py  test_27_rescore.py  test_28_vault.py  test_29_composer.py  test_30_source_health.py  test_31_backup.py  test_32_alerts.py  test_33_vault_composer_link.py  test_34_vault_composer_settings.py  test_35_digest.py
(+42 files in other folders)
