[project]
name = "the_scout"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "pyyaml",
    "openpyxl",
    "python-dotenv",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "pyjwt[crypto]",
    "unidecode",
    "fastapi",
    "uvicorn[standard]",
    "apscheduler",
    "sentry-sdk[fastapi]",
]

[tool.setuptools.packages.find]
where = ["src"]
