[project]
name = "the_scout"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "pyyaml",
    "openpyxl",
    "python-dotenv",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "pyjwt[crypto]",
    "unidecode",
    "fastapi",
    "python-multipart",
    "uvicorn[standard]",
    "apscheduler",
    "sentry-sdk[fastapi]",
    # Vault (document ingest/embed/metadata-extraction) — see src/vault.py.
    "chromadb",
    "sentence-transformers",
    "pdfplumber",
    "python-docx",
    "pymupdf",
    "anthropic",
]

[tool.setuptools.packages.find]
where = ["src"]
