[project]
name = "the_scout"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "pyyaml",
    "openpyxl",
    "python-dotenv",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "pyjwt[crypto]",
    "unidecode",
    "fastapi",
    "python-multipart",
    "uvicorn[standard]",
    "apscheduler",
    "sentry-sdk[fastapi]",
    # Vault (document ingest/embed/metadata-extraction) — see src/vault.py.
    "chromadb",
    "sentence-transformers",
    "pdfplumber",
    "python-docx",
    "pymupdf",
    "anthropic",
    # Composer (src/composer.py) — compliance_matrix.xlsx read/write, ported
    # from proposal_tool/generate.py's pandas-based column parsing.
    "pandas",
    # CR-004 F4 — backup upload/download to S3-compatible object storage
    # (AWS S3 / Backblaze B2 / GCS all speak this API). Inert if
    # BACKUP_S3_BUCKET is unset — see src/backup.py.
    "boto3",
]

[project.scripts]
tenderizer = "cli:main"

[tool.setuptools.packages.find]
where = ["src"]
